--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "eslint-config-next": "13.3.4",
     "next": "13.3.4",
     "postcss": "8.4.23",
+    "qs": "^6.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/qs": "^6.9.7"
   }
 }
